perf(meshforge): correct packer benchmark state and reduce key churn